# music-lstm

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: compose.py  extract_notes.py  get_data.py  lstm_model.py  midi_dataset.py  train.py
src/next_token_prediction/: compose.py  model.py  train.py
src/seq2seq/: compose.py  model.py  train.py
